--- a/buildspec.yml
+++ b/buildspec.yml
@@ -7,9 +7,6 @@ phases:
     commands:
       # Install dependencies needed for running tests
       - npm install
-      - mkdir -p ./dependencies-layer/nodejs
-      - mv ./node_modules ./dependencies-layer/nodejs
-
       # Upgrade AWS CLI to the latest version
       # after pass test, move dependencies to layer
       - mkdir -p ./dependencies-layer/nodejs
@@ -22,6 +19,10 @@ phases:
     commands:
       # Discover and run unit tests in the 'tests' directory
       - npm test
+
+      # after pass test, move dependencies to layer
+      - mkdir -p ./dependencies-layer/nodejs
+      - mv ./node_modules ./dependencies-layer/nodejs      
   build:
     commands:
       # Use AWS SAM to package the application using AWS CloudFormation
