--- a/buildspec.yml
+++ b/buildspec.yml
@@ -22,7 +22,7 @@ phases:
 
       # after pass test, move dependencies to layer
       - mkdir -p ./dependencies-layer/nodejs
-      - mv ./node_modules ./dependencies-layer/nodejs      
+      - cp ./node_modules ./dependencies-layer/nodejs      
   build:
     commands:
       # Use AWS SAM to package the application using AWS CloudFormation
