--- a/package.json
+++ b/package.json
@@ -4,9 +4,8 @@
     "version": "0.0.1",
     "private": true,
     "dependencies": {
-        "aws-serverless-express": "3.1.3",
         "express": "4.16.2",
-        "temp-units-conv": "^1.0.2"
+        "aws-serverless-express": "3.1.3"
     },
     "devDependencies": {
         "mocha": "5.0.0",
