--- a/buildspec.yml
+++ b/buildspec.yml
@@ -7,6 +7,9 @@ phases:
     commands:
       # Install dependencies needed for running tests
       - npm install
+      - mkdir -p ./dependencies-layer/nodejs
+      - mv ./node_modules ./dependencies-layer/nodejs
+
       # Upgrade AWS CLI to the latest version
       # after pass test, move dependencies to layer
       - mkdir -p ./dependencies-layer/nodejs
