--- a/buildspec.yml
+++ b/buildspec.yml
@@ -7,13 +7,14 @@ phases:
     commands:
       # Install dependencies needed for running tests
       - npm install
-
       # Upgrade AWS CLI to the latest version
       - pip install --upgrade awscli
   pre_build:
     commands:
       # Discover and run unit tests in the 'tests' directory
       - npm test
+      - mkdir -p ./dependencies-layer/nodejs
+      - mv node_modules ./dependencies-layer/nodejs
   build:
     commands:
       # Use AWS SAM to package the application using AWS CloudFormation
